Python BFV library - noise analysis support

--- a/00-main.tex
+++ b/00-main.tex
@@ -647,11 +647,11 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 
 \clearpage
 
-\section{Python-based Demo FHE Library}
+\section{Python Demo FHE Library}
 \input{d07-python-demo-library}
 
 %\input{scratch}
-
+\clearpage
 
 \bibliographystyle{unsrt}
 \bibliography{z-bibfile}
