--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -2190,8 +2190,7 @@ It's true that $z_i \equiv z_{i,0} \bmod p$. Fermat's Little Theorem states $a^{
 \item \textbf{\textit{Claim:}} $z_i^p \equiv z_{i, 0}^p \bmod p^{\varepsilon'+1}$ 
 
 \begin{myproof}
-\[
-(z_{i,0} + kp^{\varepsilon'})^p \bmod p^{\varepsilon'+1}= \sum\limits_{j=0}^{p}  \binom{p}{j}\cdot  z_{i,0}^{j} \cdot (kp^{\varepsilon'})^{p-j} \bmod p^{\varepsilon'+1} \text{\textcolor{red}{ $\rhd$ binomial expansion formula}} \] 
+$(z_{i,0} + kp^{\varepsilon'})^p \bmod p^{\varepsilon'+1}= \sum\limits_{j=0}^{p}  \binom{p}{j}\cdot  z_{i,0}^{j} \cdot (kp^{\varepsilon'})^{p-j} \bmod p^{\varepsilon'+1}$ \textcolor{red}{ $\rhd$ binomial expansion formula}
 
 $ \equiv z_{i,0}^{p} \bmod p^{\varepsilon' + 1}$ \textcolor{red}{ $\rhd$ all terms where $j < p$ are $0 \bmod p^{\varepsilon' + 1}$}
 \end{myproof}
