TFHE, CKKS, BGV implementations are added. Also, a new section for the alternative method of TFHE's cipher-cipher multiplication is added.

--- a/c04-glwe-modulus-switch.tex
+++ b/c04-glwe-modulus-switch.tex
@@ -212,7 +212,7 @@ $m = \left \lceil \dfrac{9}{\hat \Delta} \right \rfloor = \left \lceil \dfrac{9}
 
 
 
-%\para{Hard Threshold on the $\Delta m$ Term's Value:} In \autoref{subsubsec:glwe-add-cipher-discuss}, we explained that the value of $\Delta m$ should not overflow or underflow its MSB $q$ during homomorphic computation (i.e., $\Delta m$ should be within the range of modulo $q$ without wrapping around), because if it wraps around the MSB, then our derived congruence relation of modulus switch loses its correctness. This is necessary in order to get the correct functionality of modulus switch on LWE ciphertexts. In particular, if we need to handle the case of $\Delta m$'s overflow, then our congruence relation of modulus switch should include the additional term $H_2 \cdot \Delta$ to take into account the added multiples of $\Delta$ caused by the overflows of $\Delta m$. But problematically, this term does not get eliminated during the modulus switch as $H_2 \cdot \Delta$ is not divisible by $\hat{q}$, which breaks our derived congruence relation above. Therefore, the applications of GLWE homomorphic encryption should ensure to manage their scaled plaintext $\Delta m$ to be always within than its maximum upper and minimum lower boundaries of the ciphertext modulus domain (i.e., $[0, q - 1]$ or $[-\dfrac{q}{2}, \dfrac{q}{2} - 1]$) throughout all computations. Meanwhile, the masking terms $A_i\cdot S_i$ are allowed to overflow or underflow ciphertext indefinitely during homomorphic computations, because during the decryption procedure they will be exactly subtracted and become zeroed out modulo $q$.  
+%\para{Hard Threshold on the $\Delta m$ Term's Value:} In \autoref{subsubsec:glwe-add-cipher-discuss}, we learned that the value of $\Delta m$ should not overflow or underflow its MSB $q$ during homomorphic computation (i.e., $\Delta m$ should be within the range of modulo $q$ without wrapping around), because if it wraps around the MSB, then our derived congruence relation of modulus switch loses its correctness. This is necessary in order to get the correct functionality of modulus switch on LWE ciphertexts. In particular, if we need to handle the case of $\Delta m$'s overflow, then our congruence relation of modulus switch should include the additional term $H_2 \cdot \Delta$ to take into account the added multiples of $\Delta$ caused by the overflows of $\Delta m$. But problematically, this term does not get eliminated during the modulus switch as $H_2 \cdot \Delta$ is not divisible by $\hat{q}$, which breaks our derived congruence relation above. Therefore, the applications of GLWE homomorphic encryption should ensure to manage their scaled plaintext $\Delta m$ to be always within than its maximum upper and minimum lower boundaries of the ciphertext modulus domain (i.e., $[0, q - 1]$ or $[-\dfrac{q}{2}, \dfrac{q}{2} - 1]$) throughout all computations. Meanwhile, the masking terms $A_i\cdot S_i$ are allowed to overflow or underflow ciphertext indefinitely during homomorphic computations, because during the decryption procedure they will be exactly subtracted and become zeroed out modulo $q$.  
 
 
 \subsection{RLWE Modulus Switching}
