--- a/d07-python-demo-library.tex
+++ b/d07-python-demo-library.tex
@@ -1,1 +1,1 @@
-We provide our Python demo FHE library (TFHE, BFV, CKKS, BGV) for educational purposes. The source code and the manual are available at \href{https://github.com/fhetextbook/fhe-textbook}{\texttt{https://github.com/fhetextbook/fhe-textbook}}.
+We provide our Python Demo FHE library (TFHE, BFV, CKKS, BGV) for educational purposes. The source code and the manual are available at \href{https://github.com/fhetextbook/fhe-textbook}{\texttt{https://github.com/fhetextbook/fhe-textbook}}.
