--- a/c03-glwe-mult-plain.tex
+++ b/c03-glwe-mult-plain.tex
@@ -119,6 +119,9 @@ $\|\Lambda_i\|_\infty \le \beta/2$, whereas $\|\Lambda\|_\infty$ can be as large
   \label{fig:decomp2}
 \end{figure}
 
-However, we cannot use this decomposition technique to the resulting ciphertext again, because the output of this algorithm is a GLWE ciphertext and converting it into a GLev ciphertext without decrypting it costs much noise and computation time (as we need to multiply the GLWE ciphertext by $\dfrac{q}{\beta}, \dfrac{q}{\beta^2}, \cdots, \dfrac{q}{\beta^l})$.  
+Nevertheless, the decomposition technique is still very useful: for GLWE key-switching (\autoref{sec:glwe-key-switching}), we will show how to key-switch by combining decomposed mask polynomials $\textsf{Decomp}^{\beta,l}(A_i)$
+with a precomputed key-switching key
+$\textsf{KSK}_i=\textsf{GLev}^{\beta,l}_{S',\sigma}(S_i)$,
+so gadget decomposition can be repeatedly leveraged across key-switching calls even though each individual application outputs a standard GLWE ciphertext.
 
-As a more efficient technique to re-initialize the noise $E$, we will describe TFHE's noise bootstrapping technique in \autoref{subsec:tfhe-noise-bootstrapping}.
+Meanwhile, for the technique to repeatedly re-initialize the noise $E$ of regular ciphertexts, we will describe TFHE's noise bootstrapping technique in \autoref{subsec:tfhe-noise-bootstrapping}.
